# ogl_template

./: CMakeLists.txt  README.md
include/: camera.h  shader_s.h
include/glad/: glad.h
lib/Debug/: glfw3.lib
lib/Release/: glfw3.lib
shaders/: shader.fs  shader.vs
src/: glad.c
